--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ __pycache__/
 
 # Ignorar carpetas tests que empiecen con "screenshot"
 tests/screenshot*/
+test_cache
 
 # Logs y archivos temporales
 *.log
